fix not showing text in 'about' section gnome settings

--- a/Sunrise-Dark/gtk-3.0/gtk.css
+++ b/Sunrise-Dark/gtk-3.0/gtk.css
@@ -134,7 +134,7 @@ label {
 
 .dim-label, label.separator, .titlebar:not(headerbar) .subtitle,
 headerbar .subtitle {
-  opacity: 0;
+  opacity: 0.55;
   text-shadow: none; }
 
 assistant .sidebar {
